--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "List1 = G.edges()\n",
-    "Graph1.add_edges_from(EL)"
+    "Graph1.add_edges_from(List1)"
    ]
   },
   {
